同步于: 9月28日6时51分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,9 +1,9 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
 #### [ 中南海政变传闻成焦点 习近平为《复兴》作序难平疑虑(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017606.md)
 #### [ 中共二十大代表选举 习亲自谋划部署引热议(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017675.md)
-#### [ 二十大代表名单出炉 习被软禁传言上推特热搜(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017566.md)
-#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
 #### [ 中将司令尚宏突然被取消二十大代表资格(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017685.md)
+#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
+#### [ 二十大代表名单出炉 习被软禁传言上推特热搜(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017566.md)
 #### [ 二十大代表名单少4人 其中甘肃省委秘书长猝死(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017588.md)
 #### [ 习近平露面破谣言 高官随同独缺王岐山(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017723.md)
 #### [ 中南海出状况？捧宋平为“定海神针”的公众号遭封杀(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017508.md)
@@ -17,11 +17,11 @@
 #### [ 央视一姐惨了 情夫老公被团灭](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657150.md)
 #### [ 岳山：二十大代表名单藏内斗和政治秘密](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833108.md)
 #### [ 习被夺权传言四起 港媒称二十大军委班子已搭成(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017452.md)
-#### [ 4人被取消二十大代表资格 1人为军队司令](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833550.md)
 #### [ 习近平露面破谣言 高官随同独缺王岐山](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833824.md)
+#### [ 4人被取消二十大代表资格 1人为军队司令](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833550.md)
 #### [ 中国地方财政有多缺钱？专家：集权经济模式已穷途末路(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017654.md)
-#### [ 章天亮:“习被软禁”成外媒热词 政变与习下台可能性有多少?](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657228.md)
 #### [ 北京对政变传言出手 习还有更大的事要担心](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657369.md)
+#### [ 章天亮:“习被软禁”成外媒热词 政变与习下台可能性有多少?](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657228.md)
 #### [ 王立科下属 鞍山公安局前局长陈志刚被查(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017612.md)
 #### [ 二十大前 习近平震慑政敌力度空前(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017466.md)
 #### [ 专家：习执政越久 越难和美国竞争](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833282.md)
@@ -34,20 +34,20 @@
 #### [ “习近平被软禁”传言引外媒关注 专家解读](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13832922.md)
 #### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
 #### [ 蓬佩奥揭中共针对美国最恶劣的谎言](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13833370.md)
-#### [ 中共军方某部司令员被踢出二十大代表名单](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103537646.md)
 #### [ 贵州悲剧再现 传甘肃转运隔离人员遭车祸4死(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017647.md)
-#### [ 内外交困 习面临前所未有挑战](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657390.md)
 #### [ 王友群：傅政华被判死缓的四大启示](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13833274.md)
+#### [ 中共军方某部司令员被踢出二十大代表名单](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103537646.md)
+#### [ 内外交困 习面临前所未有挑战](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657390.md)
+#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 影射软禁习近平？日本瓶装玩偶引热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657183.md)
 #### [ 曾陪习考察 中联办副主任谭铁牛掌南京大学(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017531.md)
-#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 中共对乌克兰立场诡异转弯？王毅会见乌外长库列巴(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017439.md)
+#### [ 习近平要打“军老虎”？两名将军接连出事](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103537880.md)
 #### [ 美专家：四大迹象表明中共开始崩溃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13832549.md)
 #### [ 【中国观察】变种腐败的窍门与政权的结局](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833405.md)
-#### [ 习近平要打“军老虎”？两名将军接连出事](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103537880.md)
+#### [ 习近平回京后首次公开露面 6常委陪同不见王岐山](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103538052.md)
 #### [ 王小洪查孙力军政治团伙 中共副总理韩正被牵出(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999389.md)
 #### [ 【一线采访】深圳沙尾再封控 民众抗议爆冲突](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833087.md)
 #### [ 【一线采访】深圳沙尾再封控 民众抗议爆冲突](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13833087.md)
 #### [ 大撒币吃不消了？中共拟修改“一带一路”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657312.md)
-#### [ 【名家专栏】中共的清零政策是一场政治瘟疫](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833018.md)
