--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -25,8 +25,8 @@
 #### [ 世界第三富豪：中共将感到越来越孤立](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833919.md)
 #### [ 习近平露面破谣言 高官随同独缺王岐山](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833824.md)
 #### [ 《隐入尘烟》惹恼谁？票房破亿遭全网封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833654.md)
-#### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
+#### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
 #### [ 习近平露面打破政变传闻 党媒连加三个头衔](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103538814.md)
 #### [ 20大前中共提“历史自信”专家：为维持谎言](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13834255.md)
 #### [ 报告：中共采用朝鲜的“三代连坐刑罚”对付异己](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657633.md)
@@ -50,4 +50,4 @@
 #### [ 【新闻看点】中共喉舌不同调 谁跟习唱对台戏？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833235.md)
 #### [ 中共企图干预美中期选举 网络行动被截获](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13833877.md)
 #### [ 中共“二十”大前 北京当局维稳全面升级](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657777.md)
-#### [ 为中共充当秘密代理人 纪超群在美获罪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13833931.md)
+#### [ 中共20大前提“历史自信” 专家：维持谎言(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017821.md)
