--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -26,8 +26,8 @@
 #### [ 管轶任上海病毒研究院院长 曾批中共防疫政策](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13834896.md)
 #### [ 大陆学者谈雄安新区陷烂尾的原因（二）](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13833939.md)
 #### [ 王友群：江泽民的谎言与残暴再次大曝光](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13834808.md)
-#### [ 要求绝对忠诚 二十大前密集审理政治案](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658011.md)
 #### [ 20大维稳抓逾143万人 律师：中共以民为敌](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13834610.md)
+#### [ 要求绝对忠诚 二十大前密集审理政治案](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/658011.md)
 #### [ 郑州大学生聚集高呼“解封”传有学校让步](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13834753.md)
 #### [ 二十大召开前 中共国际形象急剧恶化](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13835240.md)
 #### [ 传二十大前禁播战狼片 “正能量”大片临阵撤档](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103538986.md)
@@ -47,7 +47,7 @@
 #### [ 太子党放风？习目前可能很危险](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/657726.md)
 #### [ 前中共江苏省委副书记张敬华被起诉(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017861.md)
 #### [ 20大前官场动荡 上海等省市6虎同日被处理](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13835196.md)
+#### [ 上访无门？中共二十大前国家信访局用铁皮围封(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017863.md)
 #### [ 刘强东涉性侵案周四在美国明州开庭审理](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13834735.md)
 #### [ 官逼民反？中国各地掀起抗议潮 民众盼中共解体](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657876.md)
-#### [ 上访无门？中共二十大前国家信访局用铁皮围封(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017863.md)
-#### [ 一文看懂 北溪天然气管道泄漏事件](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13833988.md)
+#### [ 网传天津10月1日封城 官方辟谣 民众不信](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13835014.md)
