--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -50,4 +50,4 @@
 #### [ 网传天津10月1日封城 官方辟谣 民众不信](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13835014.md)
 #### [ 20大前官场动荡 上海等省市6虎同日被处理](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13835196.md)
 #### [ 一文看懂 北溪天然气管道泄漏事件](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13833988.md)
-#### [ 刘强东涉性侵案周四在美国明州开庭审理](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13834735.md)
+#### [ 官逼民反？中国各地掀起抗议潮 民众盼中共解体](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/657876.md)
